[project]
name = "lesson-10-1-8"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Ivanov",email = "stuardryan14529@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "lesson_10"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
